Day2/MPI/errors/error.1766.err
./programs/matrix_add.c: In function ‘main’:
./programs/matrix_add.c:44:3: error: ‘elapsed’ undeclared (first use in this function)
   elapsed = end_time - start_time;
   ^~~~~~~
./programs/matrix_add.c:44:3: note: each undeclared identifier is reported only once for each function it appears in
./programs/matrix_add.c:45:3: warning: implicit declaration of function ‘printf’ [-Wimplicit-function-declaration]
   printf("Elapsed time = %4.2lf seconds. \n",elapsed);
   ^~~~~~
./programs/matrix_add.c:45:3: warning: incompatible implicit declaration of built-in function ‘printf’
./programs/matrix_add.c:45:3: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
./programs/matrix_add.c:2:1:
+#include <stdio.h>
 #define MAT_SIZE 16
./programs/matrix_add.c:45:3:
   printf("Elapsed time = %4.2lf seconds. \n",elapsed);
   ^~~~~~
--------------------------------------------------------------------------
WARNING: No preset parameters were found for the device that Open MPI
detected:

  Local host:            cn01
  Device name:           mlx5_0
  Device vendor ID:      0x02c9
  Device vendor part ID: 4125

Default device parameters will be used, which may result in lower
performance.  You can edit any of the files specified by the
btl_openib_device_param_files MCA parameter to set values for your
device.

NOTE: You can turn off this warning by setting the MCA parameter
      btl_openib_warn_no_device_params_found to 0.
--------------------------------------------------------------------------
--------------------------------------------------------------------------
No OpenFabrics connection schemes reported that they were able to be
used on a specific port.  As such, the openib BTL (OpenFabrics
support) will be disabled for this port.

  Local host:           cn01
  Local device:         mlx5_0
  Local port:           1
  CPCs attempted:       rdmacm, udcm
--------------------------------------------------------------------------
